# churninator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  LICENSE  Makefile  Makefile.local  Procfile.local  README.md  claude_context.sh  context.txt  docker-compose.prod.yml  docker-compose.yml  requirements.txt  setup.py
backend/: .env  .env.example  .env.test  Dockerfile.api  README.md  alembic.ini  pyproject.toml
backend/inference/: Dockerfile.inference  README.md  pyproject.toml  server.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  dependencies.py
backend/src/api/v1/endpoints/: agent.py  auth.py  billing.py  users.py
backend/src/core/: security.py  settings.py
backend/src/db/: postgresql.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 2c3914f9c5e9_add_stripe_fields_to_user_model.py  470bee1dc486_add_keyframe_indices_to_agentrun.py  5ff4243f6cce_add_report_path_to_agentrun.py  c110a9535ac2_update_agent_run_log_and_result_.py  cb1461dc0cb2_initial_migration.py  f8d9f0857c64_initial_migration.py
backend/src/db/models/: __init__.py  agent_run.py  oauth_account.py  report.py  user.py
backend/src/services/: agent_runner.py
backend/src/services/vlm/: base.py  factory.py  gemini_provider.py  huggingface_provider.py  local_provider.py  openai_provider.py  parsers.py
backend/src/utils/: favicon.py
backend/src/worker/: Dockerfile  broker.py  entrypoint.sh  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_agent_endpoints.py  test_auth_endpoints.py
backend/tests/services/: test_agent_runner.py
backend/tests/utils/: test_function_parser.py
backend/tests/worker/: test_tasks.py
backend/worker/: .dockerignore  Dockerfile.worker  README.md  broker.py  entrypoint.sh  pyproject.toml  tasks.py
backend/worker/prompts/: agent_system_prompt.txt  markdown_designer_prompt.txt  report_analyst_prompt.txt
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.inference.mac  Dockerfile.inference.nvidia  Dockerfile.worker
forge/: README.md  config.yaml  pyproject.toml
forge/data/: download_aguvis.sh  download_eval_data.sh  preprocess.py
forge/docker/: Dockerfile.inference  Dockerfile.train
forge/eval/: eval.py  eval_dataset.py  eval_prompt.py  qualitative_eval.py
forge/train/: collator.py  datasets.py  train.py
forge/train/config/: stage1_grounding.yaml  stage2_reasoning.yaml
forge/utils/: action_conversion.py  function_parser.py
scripts/: sync_to_vast.sh
web/: middleware.ts  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  providers.tsx
web/src/app/(pages)/: page.tsx
web/src/app/(pages)/(auth)/: layout.tsx
web/src/app/(pages)/(auth)/login/: page.tsx
web/src/app/(pages)/(auth)/signup/: page.tsx
web/src/app/(pages)/(authed)/: layout.tsx
web/src/app/(pages)/(authed)/dashboard/: page.tsx
web/src/app/(pages)/(authed)/dashboard/payment/cancel/: page.tsx
web/src/app/(pages)/(authed)/dashboard/run/: page.tsx
web/src/app/(pages)/(authed)/history/: page.tsx
web/src/app/(pages)/(authed)/settings/: layout.tsx  page.tsx
web/src/app/(pages)/(authed)/settings/api/: page.tsx
web/src/app/(pages)/(authed)/settings/billing/: page.tsx
web/src/app/(pages)/(authed)/settings/profile/: page.tsx
web/src/app/api/auth/[...nextauth]/: route.ts
web/src/components/: theme-toggle.tsx
web/src/components/auth/: auth-form.tsx  brand-panel.tsx  user-button.tsx  user-dropdown.tsx
web/src/components/dashboard/: CommandPalette.tsx  UserAvatar.tsx  billing-management.tsx  data-table.tsx  header.tsx  history-columns.tsx  settings-sidebar.tsx  sidebar.tsx
web/src/components/landing/: cta.tsx  faq.tsx  features.tsx  flickering-grid.tsx  footer.tsx  header-client.tsx  hero-client-content.tsx  hero.tsx  open-source-section.tsx  pricing-skeleton.tsx  pricing.tsx  testimonials-columns-1.tsx  testimonials.tsx
web/src/components/shared/: Breadcrumbs.tsx  logo.tsx
web/src/components/ui/: ripple.tsx
web/src/hooks/: use-agent-runs.ts  use-event-source.ts  use-media-query.tsx
web/src/types/: index.ts  next-auth.d.ts
(+2 files in other folders)
