[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dramatiq[redis]>=1.18.0",
    "fastapi>=0.117.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "playwright>=1.55.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
]
