[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dramatiq[redis]>=1.18.0",
    "httpx>=0.28.1",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "openai>=1.55.0",
    "psycopg2>=2.9.10",
]

# --- START FIX ---
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
# --- END FIX ---

[tool.uv.sources]
backend = { path = ".." }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
